# greek-software-ecosystem

./: .gitignore  Justfile  README.md  cliff.toml  code_of_conduct.md  contributing.md  development.md  engineering-hubs.md  index.html  pyproject.toml  readme.md  readme.yaml  robots.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: 02-add-company.yml
.github/workflows/: pr-validation.yaml  release-on-main.yaml  sync-on-main-merge.yaml
_data/: README.md  open_greek_data.yaml  podcasts.yaml  readme.yaml  workable_counts.yaml
_data/companies/: aambience-services.yaml  abzorba-games-p-c.yaml  accenture.yaml  acronis.yaml  adecco.yaml  aegean-airlines.yaml  agile-actors.yaml  aisera.yaml  allwyn-hellas.yaml  alma-economics.yaml  alpha-bank.yaml  altamira.yaml  amdocs.yaml  archeiothiki.yaml  ariverse.yaml  astrato-analytics.yaml  atcom.yaml  athens-technology-center.yaml  automation-anywhere.yaml  bbv-greece.yaml  benefit-software.yaml  berkeley-square-talent-specialists-in-it-engineering.yaml  bespot.yaml  bestprice.yaml  beta-cae.yaml  betsson-group.yaml  bewise.yaml  block-labs.yaml  blueground.yaml  capgemini.yaml  capture-one.yaml  (+229 more)
data/: companies.yaml  queries.yaml  workable_counts.yaml
docs/: engineering-hubs.md  readme.md  search-queries-and-resources.md
employers/: index.html
jekyll-pages/: _config.yml
job-search/: index.html
open-source/: index.html
podcasts/: index.html
resources/: index.html
scripts/: fetch_workable_counts.py  generate_index.py  generate_readme.py  workable_apply_slug.py
templates/: index_template.html
workspaces/: index.html
(+24 files in other folders)
